# jigsawpuzzle

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: appsession.cpp  main.cpp
src/global/: applogger.cpp  applogger.h  common.h  glo.cpp  glo.h  uiglo.cpp
src/logic/: appconf.h  appconfparser.h  gamelevel.h  gamescene.cpp  gamescene.h  jpgame.cpp  sliceimagepane.cpp
src/logic/mediator/: mainwindowmediator.h
src/ui/: clientview.h  controlpanel.h  movielabel.cpp
trunk/3rd/: boost-note.txt
trunk/builds/: jigsawpuzzlesln.sln
trunk/builds/jigsawpuzzle/: app.qss  controlpanel.ui  jigsawpuzzle.log.txt  jigsawpuzzle.qrc  jigsawpuzzle.rc  jigsawpuzzle.vcxproj  jigsawpuzzle.vcxproj.filters  jigsawpuzzle_zh.qm  jigsawpuzzle_zh.ts
trunk/builds/jigsawpuzzle/conf/: app.qss  appconf.xml  applogger.xml
trunk/builds/jigsawpuzzle/conf/language/: jigsawpuzzle_zh.qm  jigsawpuzzle_zh.ts
trunk/src/app/: appsession.cpp  appsession.h  main.cpp
trunk/src/global/: applogger.h  common.h  glo.cpp  glo.h  uiglo.cpp  uiglo.h
trunk/src/logic/: appconf.h  appconfparser.cpp  appconfparser.h  gamebuilder.h  gameconfig  gameconfig.h  gamescene.cpp  gamescene.h  gamestate.h  glosignals.h  hangupstate.cpp  hangupstate.h  jpgame.cpp  jpgame.h  playingstate.cpp  playingstate.h  sliceimageitem.cpp  sliceimageitem.h  sliceimagepane.cpp  sliceimagepane.h  uimediator.hxx  xsignal.hxx
trunk/src/logic/mediator/: controlpanelmediator.cpp  controlpanelmediator.h  mainwindowmediator.cpp  mainwindowmediator.h
trunk/src/ui/: animatesplash.cpp  animatesplash.h  clientview.cpp  clientview.h  controlpanel.cpp  controlpanel.h  gameview.cpp  gameview.h  mainwindow.cpp  mainwindow.h  movielabel.h
